<resources>
    <string name="app_name">Facepunch Droid</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_forward">Forward</string>
    <string name="action_prevpage">Previous page</string>
    <string name="action_nextpage">Next page</string>
    <string name="action_pin_to_drawer">Pin to drawer</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="action_set_as_start_page">Set as start page</string>
    <string name="action_disable_images">Disable images</string>

    <string name="not_logged_in">Not logged in</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_edit_pinned_items">Edit pinned pages</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <string name="pref_title_startpage">Change start page</string>
    <string name="pref_default_startpage">https://facepunch.com</string>


    <string name="pref_header_styles">Custom themes</string>
    <string name="pref_title_enable_styles">Enable custom style</string>
    <string name="pref_description_enable_styles">Use your own custom styles</string>

    <string-array name="donation_google_catalog_values" translateable="false">
        <item>1 Dollar</item>
        <item>2 Dollars</item>
        <item>5 Dollars</item>
        <item>10 Dollars</item>
    </string-array>

    <string name="pref_header_about">About</string>
    <string name="enable_dark_theme_description">Use dark theme, which is easier on the eyes.</string>
    <string name="enable_custom_startpage_description">When opening the app, use a custom start page</string>
    <string name="enable_dark_theme">Use dark theme</string>
    <string name="enable_custom_startpage">Use custom start page</string>
    <string name="reset_startpage">Reset start page</string>
    <string name="current_startpage">Current start page</string>
    <string name="custom_style_file">Custom style file</string>
    <string name="custom_style_file_description">Select your own custom css style</string>
    <string name="reset_startpage_description">Reset the current startpage to the Facepunch homepage</string>
    <string name="nav_home">Home</string>
    <string name="nav_events">Events</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_read">Read</string>
    <string name="nav_search">Search</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_controlpanel">Control Panel</string>
    <string name="nav_ticker">Ticker</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_pinnedpages">Pinned pages</string>
    <string name="nav_editpinnedpages">Edit pinned pages</string>
    <string name="nav_changes">Changes</string>
    <string name="nav_roadmap">Roadmap</string>
    <string name="nav_help">Help</string>

    <string name="action_download">Download</string>

    <string name="logout_description">Are you sure you want to log out?</string>
    <string name="new_startpage_set">New startpage is now set</string>
    <string name="go_to_page">Go to page</string>
    <string name="paged_was_pinned">Paged was pinned</string>
    <string name="select_smiley">Select smiley</string>
    <string name="action_close">Close</string>

    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <string name="answer_ok">Ok</string>
    <string name="answer_cancel">Cancel</string>

    <string name="language">Language</string>
    <string name="language_description">Change the langauge of the app</string>
    <string name="lang_system">System language</string>
    <string name="lang_english">English</string>
    <string name="lang_danish">Danish</string>
    <string name="lang_german">German</string>

    <string name="currentpage">Current page</string>

    <string name="of"> of </string>
    <string name="pref_header_userscripts">Userscripts</string>
    <string name="pref_description_enable_userscripts">Use userscripts, that can enhance the user experience</string>
    <string name="pref_title_enable_userscripts">Enable userscripts</string>
    <string name="add_userscript">Add Userscript</string>
    <string name="userscript_dialog_title">Select</string>
    <string name="dialog_enternewtitle_title">Enter new title</string>
    <string name="userscript_was_deleted">Userscript was deleted</string>
    <string name="userscript_was_added">Userscript was added</string>

    <string name="dialog_enternewurl_title">Enter new URL</string>
    <string name="pinned_item_was_updated">Pinned item was updated</string>

    <string-array name="languages">
        <item>@string/lang_system</item>
        <item>@string/lang_english</item>
        <item>@string/lang_danish</item>
        <item>@string/lang_german</item>
    </string-array>

    <string-array name="languages_vals">
        <item>system</item>
        <item>en</item>
        <item>da</item>
        <item>de</item>
    </string-array>

    <string name="userscript_rename">Rename</string>
    <string name="userscript_delete">Delete</string>

    <string name="editpinneditem_edit_title">Edit title</string>
    <string name="editpinneditem_edit_url">Edit URL</string>

    <string-array name="userscript_options">
        <item>@string/userscript_rename</item>
        <item>@string/userscript_delete</item>
    </string-array>

    <string-array name="editpinneditem_options">
        <item>@string/editpinneditem_edit_title</item>
        <item>@string/editpinneditem_edit_url</item>
        <item>@string/userscript_delete</item>
    </string-array>

    <string name="context_menu_save_image">Save image</string>
    <string name="context_menu_view_image">View image</string>
    <string name="context_menu_open">Open</string>
    <string name="context_menu_open_in_browser">Open in browser</string>
    <string name="context_menu_save_link">Save as</string>
    <string name="context_menu_share_link">Share</string>
    <string name="context_menu_open_in_other_app">Open in other app</string>
    <string name="context_menu_save_video">Save video</string>
    <string name="context_menu_share_video">Share</string>
    <string name="context_menu_copy_url">Copy url address</string>
    <string name="snackbar_copied">Copied!</string>

    <string name="settings_clear_image_cache">Clear image cache</string>
    <string name="settings_snackbar_image_cache_was_cleared">Cache was cleared</string>
    <string name="action_find">Find on page</string>
    <string name="dialog_find">Find on page</string>

    <string name="settings_category_title_pagepinning">Page pinning</string>
    <string name="settings_pagepinning_goto_newest_post">Go to newest post on threads</string>
    <string name="settings_pagepinning_goto_newest_post_description">When pinning threads, you will be navigated to the newest post, when returning.</string>


    <!-- Notification strings -->

    <string name="pref_header_notifications">Notifications</string>
    <string name="check_interval_title">Check interval</string>
    <string name="check_interval_summary">How often should the app check for new messages.</string>
    <string name="check_interval_dialog_title">Check every</string>

    <string name="interval_5min">5 Minutes</string>
    <string name="interval_15min">15 Minutes</string>
    <string name="interval_30min">30 Minutes</string>
    <string name="interval_60min">60 Minutes</string>

    <string name="interval_value_15min">900000</string>
    <string name="interval_value_30min">1800000</string>
    <string name="interval_value_60min">3600000</string>
    <string name="settings_loggedin_requirement">You need to be logged in to use these settings.</string>


    <string-array name="pm_check_interval" translatable="false">
        <item>@string/interval_5min</item>
        <item>@string/interval_15min</item>
        <item>@string/interval_30min</item>
        <item>@string/interval_60min</item>
    </string-array>
    <string-array name="pm_check_interval_values" translatable="false">
        <item>300000</item> <!-- 5 min -->
        <item>900000</item> <!-- 15 min -->
        <item>1800000</item> <!-- 30 min -->
        <item>3600000</item> <!-- 60 min -->
    </string-array>

    <string name="dialog_goto_last_page">Go to last page</string>
    <string name="dialog_goto_first_page">Go to first page</string>
    <string name="disable_user_title_images_sumary">This disables backgrounds, marquee\'s and other annoying custom title elements.</string>
    <string name="disable_user_title_images">Disable user title images</string>

</resources>
