<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_dark_theme"
        android:summary="@string/enable_dark_theme_description"
        android:title="@string/enable_dark_theme" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_custom_startpage"
        android:summary="@string/enable_custom_startpage_description"
        android:title="@string/enable_custom_startpage" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <Preference
        android:title="@string/reset_startpage"
        android:summary="@string/reset_startpage_description"
        android:dependency="enable_custom_startpage"
        android:key="reset_startpage">
    </Preference>

    <Preference
        android:title="@string/current_startpage"
        android:summary="Default"
        android:enabled="false"
        android:key="current_startpage">
    </Preference>

</PreferenceScreen>
